implicit ML context, which was occasionally hard to predict and in
conflict with concurrency.  INCOMPATIBILITY, use ML within Isar which
provides a proper context already.

* Theory loader: old-style ML proof scripts being *attached* to a thy
file are no longer supported.  INCOMPATIBILITY, regular 'uses' and
'use' within a theory file will do the job.


*** Pure ***

* Eliminated destructive theorem database.  Potential INCOMPATIBILITY,
really need to observe linear functional update of theories.

* Commands 'use' and 'ML' are now purely functional, operating on
theory/local_theory.  Removed former 'ML_setup' (on theory), use 'ML'
instead.  Added 'ML_val' as mere diagnostic replacement for 'ML'.
INCOMPATIBILITY.

* Eliminated theory ProtoPure.  Potential INCOMPATIBILITY.

* Command 'setup': discontinued implicit version.

* Instantiation target allows for simultaneous specification of class
instance operations together with an instantiation proof.
Type-checking phase allows to refer to class operations uniformly.
See HOL/Complex/Complex.thy for an Isar example and
HOL/Library/Eval.thy for an ML example.

* Indexing of literal facts: be more serious about including only
facts from the visible specification/proof context, but not the
background context (locale etc.).  Affects `prop` notation and method
"fact".  INCOMPATIBILITY: need to name facts explicitly in rare
situations.


*** HOL ***

* Class finite no longer treats UNIV as class parameter.  Use class enum from
theory Library/Enum instead to achieve a similar effect.  INCOMPATIBILITY.

* Theory List: rule list_induct2 now has explicitly named cases "Nil" and "Cons".
INCOMPATIBILITY.

* HOL (and FOL): renamed variables in rules imp_elim and swap.
Potential INCOMPATIBILITY.

* Theory Product_Type: duplicated lemmas split_Pair_apply and injective_fst_snd
removed, use split_eta and prod_eqI instead.  Renamed upd_fst to apfst and upd_snd
to apsnd.  INCOMPATIBILITY.
