@@ -293,7 +293,7 @@ use "simpdata.ML"
 setup simpsetup
 setup "Simplifier.method_setup Splitter.split_modifiers"
 setup Splitter.setup
-setup Clasimp.setup
+setup clasimp_setup
 setup EqSubst.setup
 
 
